--- a/application.properties
+++ b/application.properties
@@ -1,1 +1,2 @@
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+welcome.message = Welcome to Spring cloud config server using github mode
